about me modifications

--- a/public/404.html
+++ b/public/404.html
@@ -13,7 +13,7 @@
   
   
   
-  <meta name="description" content="PhD Candidate in Computer science">
+  <meta name="description" content="PhD Candidate in Computer science &amp; Lifelong learner.">
 
   
   <link rel="alternate" hreflang="en-us" href="">
@@ -90,7 +90,7 @@
   <meta property="og:site_name" content="Abir Ismaili-Alaoui">
   <meta property="og:url" content="">
   <meta property="og:title" content="404 Page not found | Abir Ismaili-Alaoui">
-  <meta property="og:description" content="PhD Candidate in Computer science">
+  <meta property="og:description" content="PhD Candidate in Computer science &amp; Lifelong learner.">
   <meta property="og:locale" content="en-us">
   
   
