--- a/public/publication_types/index.html
+++ b/public/publication_types/index.html
@@ -15,7 +15,7 @@
   
   
   
-  <meta name="description" content="PhD Candidate in Computer science">
+  <meta name="description" content="PhD Candidate in Computer science &amp; Lifelong learner.">
 
   
   <link rel="alternate" hreflang="en-us" href="/publication_types/">
@@ -92,7 +92,7 @@
   <meta property="og:site_name" content="Abir Ismaili-Alaoui">
   <meta property="og:url" content="/publication_types/">
   <meta property="og:title" content="Publication_types | Abir Ismaili-Alaoui">
-  <meta property="og:description" content="PhD Candidate in Computer science">
+  <meta property="og:description" content="PhD Candidate in Computer science &amp; Lifelong learner.">
   <meta property="og:locale" content="en-us">
   
   
